--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 title: OffSec!
-description: Hacker is a theme for GitHub Pages.
+description: This site documents my journey through offensive security.
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-hacker
-
