--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
-title: OffSec!
-description: This site documents my journey through offensive security.
-show_downloads: false
+title: Hacker theme
+description: Hacker is a theme for GitHub Pages.
+show_downloads: true
 google_analytics:
 theme: jekyll-theme-hacker
+
